--- a/index.html
+++ b/index.html
@@ -215,32 +215,28 @@
             Feeds
           </h3>
         </header>
-        <article class="latest-blog">
+        <article class="latest-blog flex-col">
           <a href="#">
             <img src="https://picsum.photos/seed/picsum/400/300" alt="" />
           </a>
           <span>20 June/2020</span>
           <a href="#">
-            Technology is evolving rapidly. New devices and applications.
+            <p>Technology is evolving rapidly. New devices and applications.</p>
           </a>
         </article>
-        <article class="blog">
-          <a href="#">
-            <img src="https://picsum.photos/seed/picsum/300/400" alt="" />
-          </a>
-          <div>
+        <article class="blog flex-col">
+          <img src="https://picsum.photos/seed/picsum/300/400" alt="" />
+          <a href="#" class="flex-col">
             <span>20 June/2020</span>
-            <a href="#">New devices and applications come to the market.</a>
-          </div>
+            <p>New devices and applications come to the market.</p>
+          </a>
         </article>
-        <article class="blog">
-          <a href="#">
-            <img src="https://picsum.photos/seed/picsum/300/400" alt="" />
-          </a>
-          <div>
+        <article class="blog flex-col">
+          <img src="https://picsum.photos/seed/picsum/300/400" alt="" />
+          <a href="#" class="flex-col">
             <span>20 June/2020</span>
-            <a href="#">Every day providing solutions to problems.</a>
-          </div>
+            <p>Every day providing solutions to problems.</p>
+          </a>
         </article>
       </div>
     </section>
